--- a/covid/covid19.html
+++ b/covid/covid19.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <title>COVID19</title>
     
     <!-- Favicon ekledik  -->
@@ -12,6 +13,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="https://kit.fontawesome.com/6619fb0629.js" crossorigin="anonymous"></script>
+
+    <!--GIRIS UYARI MESAJI-->
+    <script>
+      alert("STAY HOME! ");
+  </script>
+
+
 </head>
 
 <body>
@@ -313,8 +323,9 @@
   </form>
   &nbsp;&nbsp;&nbsp;
 </div>
-		
-										
+  
+
+
 
 <div class="jumbotron text-center" style="margin-bottom:0; background-color: whitesmoke">
   <p style="font-style: italic; color: cadetblue">Created by BEGÜM ÜNER</p>
